CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0 FATAL_ERROR)

PROJECT(libwordtrie LANGUAGES CXX)

SET(LIBWORDTRIE_SRC_DIR ${CMAKE_CURRENT_LIST_DIR})

FILE(GLOB LIBWORDTRIE_SRC
  "${LIBUNIKEY_SRC_DIR}/wordtrie*.cpp"
)

ADD_LIBRARY(libwordtrie STATIC ${LIBWORDTRIE_SRC})

TARGET_COMPILE_OPTIONS(libwordtrie
  PUBLIC -funsigned-char)

TARGET_INCLUDE_DIRECTORIES(libwordtrie INTERFACE ${LIBWORDTRIE_SRC_DIR})

SET_TARGET_PROPERTIES(libwordtrie PROPERTIES OUTPUT_NAME "word_trie")
